# Study-Battle

./: .env.example  .gitignore  .replit  README.md  pyproject.toml  replit.md
attached_assets/: Pasted-Awesome-thanks-for-picking-Zilliz-Cloud-Milvus-DeepSeek-Below-is-the-exact-prompt--1764230784516_1764230784517.txt
backend/: generator.py  main.py  models.py  rag.py  storage.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: Arena.jsx  Chatbot.jsx  Lobby.jsx  Matches.jsx  Upload.jsx  Workspace.jsx
sample_data/: linear_algebra_basics.txt
